<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_weather_day_time"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:background="#9966cc" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_common_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_day_hint"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv_lunar_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lunar_day_hint"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_hint"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="5dp" >

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/temperature_hint"
                        android:singleLine="true"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/tv_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weather_hint"
                        android:singleLine="true"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wind_hint"
                        android:singleLine="true"
                        android:textSize="19sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/iv_weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_air_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/air_quality_hint"
                android:paddingLeft="5dp"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="50dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_sec_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/sec_day_hint"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/iv_sec_day_weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/tv_sec_day_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/sec_day_weather_hint"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_third_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/third_day_hint"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/iv_third_day_weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/tv_third_day_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/third_day_weather_hint"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_forth_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/forth_day_hint"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/iv_forth_day_weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/tv_forth_day_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/forth_day_weather_hint"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>