<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#5252A3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_real_time_broadcasting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:paddingBottom="5dp"
            android:paddingLeft="50dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/real_time_broadcasting"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:src="@drawable/black_down" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/bottom_button_horizontal_margin"
            android:paddingRight="@dimen/bottom_button_vertical_margin" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_tv_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_tv"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_tv"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_movie_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_movies"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_movies"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_drama_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_drama"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_drama"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_youtube_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_youtube"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_youtube"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_games_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_games"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_games"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_radio_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_radio"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_radio"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_apps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_apps_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_apps"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_apps"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <com.vim.exlauncher.ui.BottomImageButton
                    android:id="@+id/ib_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bottom_buttom_settings_bg"
                    android:contentDescription="@string/app_name"
                    android:focusableInTouchMode="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_setting"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/button_setting"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>