<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="420dp" >

    <RelativeLayout
        android:id="@+id/rl_fav_apps"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="2dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_fav_apps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/my_fav_apps"
            android:textSize="25dp" >
        </TextView>
    </RelativeLayout>

    <com.vim.exlauncher.MyRelativeLayout
        android:id="@+id/rl_usr_manager"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/rl_fav_apps"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_usr_manager" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            android:text="@string/usr_manager"
            android:textSize="30dp" >
        </TextView>
    </com.vim.exlauncher.MyRelativeLayout>

    <com.vim.exlauncher.MyRelativeLayout
        android:id="@+id/rl_news"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/rl_usr_manager"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_news" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            android:text="@string/news"
            android:textSize="30dp" >
        </TextView>
    </com.vim.exlauncher.MyRelativeLayout>

    <com.vim.exlauncher.MyRelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/rl_news"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            android:text="@string/settings"
            android:textSize="30dp" >
        </TextView>
    </com.vim.exlauncher.MyRelativeLayout>

</RelativeLayout>